Fixing bug with table text alignment.

--- a/content/css/screen.css
+++ b/content/css/screen.css
@@ -197,7 +197,7 @@ nav a {
 }
 
 #schedule table {
-    float: left; width: 100%; font-size: 14px; color: #363636;
+    float: left; width: 100%; font-size: 14px; color: #363636; text-align: left;
 }
 
 #schedule td{
